--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>District:</strong>
-  <%= @user.district %>
+<!--         I took out district for now as it was breaking the code -->
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
