--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -24,8 +24,8 @@
     <%= f.datetime_select :expires %>
   </div>
   <div class="field">
-    <%= f.label :district %><br>
-    <%= f.text_field :district %>
+<!--         I took out district for now as it was breaking the code -->
+<!--         I took out district for now as it was breaking the code -->
   </div>
   <div class="actions">
     <%= f.submit %>
