--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,30 +1,42 @@
 
-<!-- <nav class="navbar navbar-default" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">Profile</a>
-      <a class="navbar-brand" href="/">Login/Logout</a>
-      <a class="navbar-brand" href="/">Logo Image goes here in the middle</a>
-      <a class="navbar-brand" href="/">Search box goes on the right</a>
-      <a class="navbar-brand" href="/">Avatar Image goes here</a>
-      <a class="navbar-brand" href="/">Endores Icon goes here</a>
-    </div>
-  </div>
-</nav> -->
-
-
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-default">
   <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Write.In</a>
     </div>
-    <div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active navbar"><a href="#">Home</a></li>
-        <li class="active navbar"><a href="#">Page 1</a></li>
-        <li class="active navbar"><a href="#">Page 2</a></li>
-        <li class="active navbar"><a href="#">Page 3</a></li>
+        <li class="active"><a href="#">Profile <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Logout</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Logo <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+
+          </ul>
+        </li>
       </ul>
-    </div>
-  </div>
+      <ul class="nav navbar-nav navbar-right">
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
 </nav>
