add district etc.

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -24,8 +24,8 @@
     <%= f.datetime_select :expires %>
   </div>
   <div class="field">
-<!--         I took out district for now as it was breaking the code -->
-<!--         I took out district for now as it was breaking the code -->
+    <%= f.label :district %><br>
+    <%= f.text_field :district %>
   </div>
   <div class="actions">
     <%= f.submit %>
