--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       <div class="row">
         <div class="col-xs-3">
         </div>
-        <div class="col-xs-9">
+        <div class="col-xs-9 debug">
           <%= yield %>
         </div>
       </div>
