--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,16 +1,16 @@
 
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
+<nav class="navbar navbar-default debug">
+  <div class="container-fluid debug">
     <!-- Brand and toggle get grouped for better mobile display -->
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
+    <div class="collapse navbar-collapse debug" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav debug">
         <li class="active"><a href="#">Profile <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Login/Logout</a></li>
       </ul>
 
-    <div class="navbar-header">
+    <div class="navbar-header debug">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -22,7 +22,7 @@
 
       <ul class="nav navbar-nav navbar-right">
       <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
+        <div class="form-group debug">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
