Update Report Card view with sorted districts and office titles

--- a/app/views/districts/report.html.erb
+++ b/app/views/districts/report.html.erb
@@ -1,1 +1,9 @@
-report.html.erb
+<h1>Report Card</h1>
+<% @districts.each do |district| %>
+    <h2><%= district.name %></h2>
+    <ul>
+      <% district.offices.each do |office|%>
+        <li><%= office.title %></li>
+      <% end %>
+    </ul>
+<% end %>
