split homepage into 3 sections

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -9,3 +9,18 @@
 .debug {
   border: 1px solid red;
 }
+
+.home-left-column {
+  float:left;
+  width:30%;
+  }
+
+.home-middle-column {
+  float:left;
+  width: 40%;
+  }
+
+.home-right-column {
+  float:left;
+  width: 30%;
+  }
