--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,23 +10,16 @@
   <body>
     <%= render 'shared/navigation' %>
 
-    <div id="main-container" class="container">
-      <div class="row">
-        <div class="col-xs-12">
+<!-- FL removed in line 14 (below) id="main-container" class="container"
+ -->    <div >
           <% flash.each do |name, msg| -%>
             <%= content_tag :div, msg, class: "alert alert-dismissible alert-#{name}" %>
           <% end -%>
   <!--         FL: what is this in 3 lines above? -->
         </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-3">
-        </div>
-        <div class="col-xs-9 debug">
+
           <%= yield %>
-        </div>
-      </div>
-    </div>
+
 
   </body>
 </html>
