--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,12 @@
+
+<div class='home-left-column debug'>
+</div>
+
+
+
+
+<div class='home-middle-column debug'>
+
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Users</h1>
@@ -28,5 +37,8 @@
 </table>
 
 <br>
+</div>
 
+<div class='home-right-column debug'>
+  </div>
 
