--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,12 +1,12 @@
 
-<nav class="navbar navbar-default debug">
+<nav class="navbar-default debug">
   <div class="container-fluid debug">
     <!-- Brand and toggle get grouped for better mobile display -->
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse debug" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav debug">
-        <li class="active"><a href="#">Profile <span class="sr-only">(current)</span></a></li>
+      <ul class="nav navbar-nav debug not-bs-nav">
+        <li class="active not-bs-nav"><a href="#">Profile <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Login/Logout</a></li>
       </ul>
 
@@ -17,7 +17,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Write.In</a>
+      <img src="capitol.png" alt="capitol" style="width:50px;height:50px;">
     </div>
 
       <ul class="nav navbar-nav navbar-right">
@@ -25,7 +25,7 @@
         <div class="form-group debug">
           <input type="text" class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default not-bs-nav">Submit</button>
       </form>
           </ul>
         </li>
