--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -5,26 +5,32 @@
 .not-bs-nav {
   font-family:Arial,sans-serif;
   font-weight: 500;
+  background-color: #f5f8fa;
 }
 
 .debug {
   border: 1px solid red;
 }
 
+.body-not-bs {
+  background-color: #e1e8ed;
+}
+
 .home-left-column {
   float:left;
   width:25%;
-  background-color:pink;
+  background-color: #f5f8fa;
   }
 
 .home-middle-column {
   float:left;
   width: 40%;
-  background-color:blue;
+  background-color:#f5f8fa;
   }
 
 .home-right-column {
   float:left;
   width: 29%;
-  background-color:purple;
+  background-color:#f5f8fa;
   }
+
