--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
   </head>
-  <body>
+  <body class="body-not-bs">
     <%= render 'shared/navigation' %>
 
 <!-- FL removed in line 14 (below) id="main-container" class="container"
