--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .not-bs-nav {
-  font-family:Arial,sans-serif;
+  font-family: Gotham,Arial,sans-serif;
   font-weight: 500;
   background-color: #f5f8fa;
 }
@@ -14,6 +14,8 @@
 
 .body-not-bs {
   background-color: #e1e8ed;
+  font-family: Gotham Narrow,Arial,sans-serif;
+  font-weight: 500;
 }
 
 .home-left-column {
