--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,30 +1,29 @@
-
 <div class='row'>
   <div class="col-md-3">
     <div class="p-s rcorners bg-w mg-l mg-r txt-c">
-        <img src="http://placehold.it/72x72" class='debug img-thumbnail m-s'>
-        <ul class='d-i debug'>
-          <li><strong>Twitter Name</strong></li>
-          <li>@handle</li>
-        </ul>
-        <ul class='p-s'>
-          <li class="d-i debug">
-            <a href="#">
-              <span>Watching<span class='d-b txt-c'>20</span></span>
-            </a>
-          </li>
-          <li class="d-i debug">
-            <a href="#">
-              <span>Watched<span class='d-b txt-c'>100</span></span>
-            </a>
-          </li>
-          <li class="d-i debug">
-            <a href="#">
-              <span>Endorsed<span class='d-b txt-c'>32</span></span>
-            </a>
-          </li>
-        </ul>
-     </div>
+      <img src="http://placehold.it/72x72" class='debug img-thumbnail m-s'>
+      <ul class='d-i debug'>
+        <li><strong>Twitter Name</strong></li>
+        <li>@handle</li>
+      </ul>
+      <ul class='p-s'>
+        <li class="d-i debug">
+          <a href="#">
+            <span>Watching<span class='d-b txt-c'>20</span></span>
+          </a>
+        </li>
+        <li class="d-i debug">
+          <a href="#">
+            <span>Watched<span class='d-b txt-c'>100</span></span>
+          </a>
+        </li>
+        <li class="d-i debug">
+          <a href="#">
+            <span>Endorsed<span class='d-b txt-c'>32</span></span>
+          </a>
+        </li>
+      </ul>
+    </div>
     <div class="p-s rcorners bg-w mg-l mg-r mg-t txt-c">
       <ul>
         <li><strong>Upcoming Election: </strong></li>
@@ -36,11 +35,15 @@
       </ul>
     </div>
   </div>
-  <div class="col-md-5 debug rcorners bg-w mg-l mg-r">
-    <strong>People I Watch</strong>
-    <div class='rcorners bg-w row txt-c'>
-      <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
-      <div class='col-md-7 mg p-s debug'>
+  <div class="col-md-5 debug bg-w mg-l mg-r">
+    <ul class='nav nav-tabs bg-w row txt-c'>
+      <li class="active"><a href="#watching" data-toggle="tab">People I Watch</a></li>
+      <li><a href="#endorse" data-toggle='tab'>People I Endorse</a></li>
+    </ul>
+    <div class='tab-content'>
+      <div class='tab-pane active rcorners bg-w row txt-c' id="watching">
+        <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
+        <div class='col-md-7 mg p-s debug'>
         <a href="#"><strong>Organization Name</strong></a href="#">
         <ul class='mg-l'>
           <li>Hillary Clinton - Office - District</li>
@@ -48,74 +51,29 @@
           <li>Bernie Sanders - Office - District</li>
         </ul>
         <ul>
-          <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-ban-circle c-r" aria-hidden="true"></span></a></li>          
+          <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-ban-circle c-r" aria-hidden="true"></span></a></li>
           <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-info-sign c-b" aria-hidden="true"></span></a></li>
         </ul>
       </div>
     </div>
-    <div class='rcorners bg-w row txt-c'>
+    <div class='tab-pane rcorners bg-w row txt-c' id="endorse">
       <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
-      <div class='col-md-7 mg p-s debug'>
-        <a href="#"><strong>Organization Name</strong></a href="#">
+        <div class='col-md-7 mg p-s debug'>
+        <a href="#"><strong>Hillary Clinton</strong></a href="#">
         <ul class='mg-l'>
-          <li>Hillary Clinton - Office - District</li>
-          <li>Joe Biden - Office - District</li>
-          <li>Bernie Sanders - Office - District</li>
+          <li>Organization 1</li>
+          <li>Organization 2</li>
+          <li>Organization 3</li>
         </ul>
         <ul>
-          <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-ban-circle c-r" aria-hidden="true"></span></a></li>          
+          <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-ban-circle c-r" aria-hidden="true"></span></a></li>
           <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-info-sign c-b" aria-hidden="true"></span></a></li>
         </ul>
       </div>
     </div>
-    <div class='rcorners bg-w row txt-c'>
-      <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
-      <div class='col-md-7 mg p-s debug'>
-        <a href="#"><strong>Organization Name</strong></a href="#">
-        <ul class='mg-l'>
-          <li>Hillary Clinton - Office - District</li>
-          <li>Joe Biden - Office - District</li>
-          <li>Bernie Sanders - Office - District</li>
-        </ul>
-        <ul>
-          <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-ban-circle c-r" aria-hidden="true"></span></a></li>          
-          <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-info-sign c-b" aria-hidden="true"></span></a></li>
-        </ul>
-      </div>
-    </div>
-    <div class='rcorners bg-w row txt-c'>
-      <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
-      <div class='col-md-7 mg p-s debug'>
-        <a href="#"><strong>Organization Name</strong></a href="#">
-        <ul class='mg-l'>
-          <li>Hillary Clinton - Office - District</li>
-          <li>Joe Biden - Office - District</li>
-          <li>Bernie Sanders - Office - District</li>
-        </ul>
-        <ul>
-          <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-ban-circle c-r" aria-hidden="true"></span></a></li>          
-          <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-info-sign c-b" aria-hidden="true"></span></a></li>
-        </ul>
-      </div>
-    </div>
-    <div class='rcorners bg-w row txt-c'>
-      <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
-      <div class='col-md-7 mg p-s debug'>
-        <a href="#"><strong>Organization Name</strong></a href="#">
-        <ul class='mg-l'>
-          <li>Hillary Clinton - Office - District</li>
-          <li>Joe Biden - Office - District</li>
-          <li>Bernie Sanders - Office - District</li>
-        </ul>
-        <ul>
-          <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-ban-circle c-r" aria-hidden="true"></span></a></li>          
-          <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-info-sign c-b" aria-hidden="true"></span></a></li>
-        </ul>
-      </div>
-    </div>
-
   </div>
-  <div class="col-md-3 debug rcorners bg-w mg-l mg-r">
-    <strong>People I endorse</strong>
-  </div>
+</div>
+<div class="col-md-3 debug rcorners bg-w mg-l mg-r">
+  <strong>Recent Activities</strong>
+</div>
 </div>
