--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -10,15 +10,15 @@
       </button>
     </div>
 
+    <a class="debug navbar-brand" href="#"><%= image_tag("Capitol.png", size: "25x23") %></a>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class=><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home <span class="sr-only">(current)</span></a></li>
-        <li class=><a href="#"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Profile <span class="sr-only">(current)</span></a></li>
+        <li class=><a href="/"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home <span class="sr-only">(current)</span></a></li>
+        <li class=><a href="/users/1"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Profile <span class="sr-only">(current)</span></a></li>
         <li class=><a href="#"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Logout <span class="sr-only">(current)</span></a></li> 
       </ul>
 
-      <a class="navbar-brand" href="#"><%= image_tag("Capitol.png", size: "25x23") %></a>
 
       <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
