Remove 3rd column

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,7 +35,7 @@
       </ul>
     </div>
   </div>
-  <div class="col-md-5 debug bg-w mg-l mg-r">
+  <div class="col-md-9 debug bg-w rcorners">
     <ul class='nav nav-tabs bg-w row txt-c'>
       <li class="active"><a href="#watching" data-toggle="tab">People I Watch</a></li>
       <li><a href="#endorse" data-toggle='tab'>People I Endorse</a></li>
@@ -72,8 +72,5 @@
       </div>
     </div>
   </div>
-</div>
-<div class="col-md-3 debug rcorners bg-w mg-l mg-r">
-  <strong>Recent Activities</strong>
 </div>
 </div>
