--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -8,16 +7,13 @@
     <%= csrf_meta_tags %>
   </head>
   <body class="body-not-bs">
-      <%= render 'shared/navigation' %>
-    <div class="container">
-
-<!-- FL removed in line 14 (below) id="main-container" class="container"
- --> <div >
-      <% flash.each do |name, msg| -%>
+    <%= render 'shared/navigation' %>
+    <div class="container debug">
+      <div >
+        <% flash.each do |name, msg| -%>
         <%= content_tag :div, msg, class: "alert alert-dismissible alert-#{name}" %>
-      <% end -%>
-    </div>
-
+        <% end -%>
+      </div>
       <%= yield %>
     </div>
   </body>
