Fix div placements in main content

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -41,36 +41,52 @@
       <li><a href="#endorse" data-toggle='tab'>People I Endorse</a></li>
     </ul>
     <div class='tab-content'>
-      <div class='tab-pane active rcorners bg-w row txt-c' id="watching">
-        <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
-        <div class='col-md-7 mg p-s debug'>
-        <a href="#"><strong>Organization Name</strong></a href="#">
-        <ul class='mg-l'>
-          <li>Hillary Clinton - Office - District</li>
-          <li>Joe Biden - Office - District</li>
-          <li>Bernie Sanders - Office - District</li>
-        </ul>
-        <ul>
-          <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-ban-circle c-r" aria-hidden="true"></span></a></li>
-          <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-info-sign c-b" aria-hidden="true"></span></a></li>
-        </ul>
+      <div class='tab-pane active' id='watching'>
+        <div class='rcorners bg-w row txt-c'>
+          <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
+          <div class='col-md-7 mg p-s debug'>
+          <a href="#"><strong>Organization Name</strong></a href="#">
+          <ul class='mg-l'>
+            <li>Hillary Clinton - Office - District</li>
+            <li>Joe Biden - Office - District</li>
+            <li>Bernie Sanders - Office - District</li>
+          </ul>
+          <ul>
+            <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-ban-circle c-r" aria-hidden="true"></span></a></li>
+            <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-info-sign c-b" aria-hidden="true"></span></a></li>
+          </ul>
+        </div>
       </div>
+      <div class='rcorners bg-w row txt-c'>
+          <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
+          <div class='col-md-7 mg p-s debug'>
+          <a href="#"><strong>Organization Name</strong></a href="#">
+          <ul class='mg-l'>
+            <li>Hillary Clinton - Office - District</li>
+            <li>Joe Biden - Office - District</li>
+            <li>Bernie Sanders - Office - District</li>
+          </ul>
+          <ul>
+            <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-ban-circle c-r" aria-hidden="true"></span></a></li>
+            <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-info-sign c-b" aria-hidden="true"></span></a></li>
+          </ul>
+        </div>
     </div>
     <div class='tab-pane rcorners bg-w row txt-c' id="endorse">
       <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
-        <div class='col-md-7 mg p-s debug'>
-        <a href="#"><strong>Hillary Clinton</strong></a href="#">
-        <ul class='mg-l'>
-          <li>Organization 1</li>
-          <li>Organization 2</li>
-          <li>Organization 3</li>
-        </ul>
-        <ul>
-          <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-ban-circle c-r" aria-hidden="true"></span></a></li>
-          <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-info-sign c-b" aria-hidden="true"></span></a></li>
-        </ul>
-      </div>
+      <div class='col-md-7 mg p-s debug'>
+      <a href="#"><strong>Hillary Clinton</strong></a href="#">
+      <ul class='mg-l'>
+        <li>Organization 1</li>
+        <li>Organization 2</li>
+        <li>Organization 3</li>
+      </ul>
+      <ul>
+        <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-ban-circle c-r" aria-hidden="true"></span></a></li>
+        <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-info-sign c-b" aria-hidden="true"></span></a></li>
+      </ul>
     </div>
   </div>
+</div>
 </div>
 </div>
