Fix misplaced last div

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -72,6 +72,7 @@
           </ul>
         </div>
     </div>
+    </div>
     <div class='tab-pane rcorners bg-w row txt-c' id="endorse">
       <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
       <div class='col-md-7 mg p-s debug'>
