Add link to logo

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -10,7 +10,7 @@
       </button>
     </div>
 
-    <a class="debug navbar-brand" href="#"><%= image_tag("Capitol.png", size: "25x23") %></a>
+    <a class="debug navbar-brand" href="/"><%= image_tag("Capitol.png", size: "25x23") %></a>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
