Add temporary fix to margins btwn columns

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class='row'>
   <div class="col-md-3">
-    <div class="p-s rcorners bg-w mg-l mg-r txt-c">
+    <div class="p-s rcorners bg-w mg-r txt-c">
       <img src="http://placehold.it/72x72" class='debug img-thumbnail m-s'>
       <ul class='d-i debug'>
         <li><strong>Twitter Name</strong></li>
@@ -24,7 +24,7 @@
         </li>
       </ul>
     </div>
-    <div class="p-s rcorners bg-w mg-l mg-r mg-t txt-c">
+    <div class="p-s rcorners bg-w mg-t mg-r txt-c">
       <ul>
         <li><strong>Upcoming Election: </strong></li>
         <li>Presidential</li>
