user can route to twitter login page

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -16,7 +16,7 @@
       <ul class="nav navbar-nav">
         <li class=><a href="/"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home <span class="sr-only">(current)</span></a></li>
         <li class=><a href="/users/1"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Profile <span class="sr-only">(current)</span></a></li>
-        <li class=><a href="#"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Logout <span class="sr-only">(current)</span></a></li> 
+        <li class=><a href="#"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Logout <span class="sr-only">(current)</span></a><%= link_to "Sign in with Twitter", "/auth/twitter" %></li>
       </ul>
 
 
