--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,44 +1,52 @@
 <div class='row'>
   <div class="col-md-3">
-    <div class="p-s rcorners bg-w mg-r txt-c">
-      <img src="http://placehold.it/72x72" class='debug img-thumbnail m-s'>
+    <div class="mg-r">
+      <img src="http://placehold.it/200x200" class='debug img-thumbnail'>
       <ul class='d-i debug'>
-        <li><strong>Twitter Name</strong></li>
-        <li>@handle</li>
-      </ul>
-      <ul class='p-s'>
-        <li class="d-i debug">
-          <a href="#">
-            <span>Watching<span class='d-b txt-c'>20</span></span>
-          </a>
-        </li>
-        <li class="d-i debug">
-          <a href="#">
-            <span>Watched<span class='d-b txt-c'>100</span></span>
-          </a>
-        </li>
-        <li class="d-i debug">
-          <a href="#">
-            <span>Endorsed<span class='d-b txt-c'>32</span></span>
-          </a>
-        </li>
+        <li class='fs-xl mg-t p-l'>Twitter Name</li>
+        <li class='fs-m p-l'>@handle</li>
       </ul>
     </div>
-    <div class="p-s rcorners bg-w mg-t mg-r txt-c">
-      <ul>
-        <li><strong>Upcoming Election: </strong></li>
-        <li>Presidential</li>
-        <li><strong>Compatible Candidates: </strong></li>
-        <li>Clinton 35%</li>
-        <li>Clinton 28%</li>
-        <li>Clinton 82%</li>
+    <div class="p-s rcorners bg-w mg-t mg-r">
+      <a href="#" class='fs-l'>Compatibility Report</a>
+      <ul class='mg-t'>
+        <li>Presidential:</li>
+          <ul>
+            <li>Clinton 35%</li>
+            <li>Clinton 28%</li>
+            <li>Clinton 82%</li>
+          </ul>
+        <li>Vice President: </li>
+          <ul>
+            <li>Clinton 35%</li>
+            <li>Clinton 28%</li>
+            <li>Clinton 82%</li>
+          </ul>
       </ul>
     </div>
   </div>
-  <div class="col-md-9 debug bg-w rcorners">
+  <div class="col-md-9 debug">
+    <div class='h-m'></div>
+     <ul class='p-s mg-b'>
+        <li class="d-i debug p-r">
+          <a href="#">
+            <span class='fs-s'>WATCHINGS<span class='d-b txt-c fs-l'>20</span></span>
+          </a>
+        </li>
+        <li class="d-i debug p-r">
+          <a href="#">
+            <span class='fs-s'>WATCHED<span class='d-b txt-c fs-l'>100</span></span>
+          </a>
+        </li>
+        <li class="d-i debug p-r">
+          <a href="#">
+            <span class='fs-s'>ENDORSED<span class='d-b txt-c fs-l'>32</span></span>
+          </a>
+        </li>
+      </ul>
     <ul class='nav nav-tabs bg-w row txt-c'>
-      <li class="active"><a href="#watching" data-toggle="tab">People I Watch</a></li>
-      <li><a href="#endorse" data-toggle='tab'>People I Endorse</a></li>
+      <li class="active"><a href="#watching" data-toggle="tab"><strong>People I Watch</strong></a></li>
+      <li><a href="#endorse" data-toggle='tab'><strong>People I Endorse</strong></a></li>
     </ul>
     <div class='tab-content'>
       <div class='tab-pane active' id='watching'>
