user can use oauth to login, logout and profile page

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -15,8 +15,25 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class=><a href="/"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home <span class="sr-only">(current)</span></a></li>
-        <li class=><a href="/users/1"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Profile <span class="sr-only">(current)</span></a></li>
-        <li class=><a href="#"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Logout <span class="sr-only">(current)</span></a><%= link_to "Sign in with Twitter", "/auth/twitter" %></li>
+        <li class=><a href=
+          <%= @current_user_path %>
+          ><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Profile <span class="sr-only">(current)</span></a></li>
+        <li class=><a href=
+          <% if @logged_in %>
+          <%= "/deauth/twitter" %>
+          <% else %>
+          <%= "auth/twitter" %>
+          <% end %>
+
+          ><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+          <% if @logged_in %>
+          <%= "Logout" %>
+          <% else %>
+          <%= "Login" %>
+          <% end %>
+         <span class="sr-only">(current)</span></a>
+        </li>
+
       </ul>
 
 
