Update layout for aside in profile

--- a/app/assets/stylesheets/customs.css.scss
+++ b/app/assets/stylesheets/customs.css.scss
@@ -24,6 +24,8 @@ ul { list-style: none; }
 
 .w { width: 100%; }
 
+.w-m { width: 80%; }
+
 .h-m { height: 9em; }
 
 .h-s { height: 5em; }
@@ -46,6 +48,8 @@ ul { list-style: none; }
 
 .fs-m { font-size: 14px; }
 
+.fs-xm { font-size: 13px; }
+
 .fs-l { font-size: 18px; }
 
 .body-not-bs {
@@ -53,6 +57,8 @@ ul { list-style: none; }
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 500;
 }
+
+.mg { mg: auto; }
 
 .mg-l { margin-left: .4em; }
 
@@ -77,6 +83,8 @@ ul { list-style: none; }
 .p-l { padding-left: .4em; }
 
 .p-r { padding-right: 2em; }
+
+.p-t { padding-top: 1.5em; }
 
 .m-s { margin: .2em; }
 
