--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,21 +8,35 @@
       </ul>
     </div>
     <div class="p-s rcorners bg-w mg-t mg-r">
-      <a href="#" class='fs-l'>Compatibility Report</a>
-      <ul class='mg-t'>
-        <li>Presidential:</li>
-          <ul>
-            <li>Clinton 35%</li>
-            <li>Clinton 28%</li>
-            <li>Clinton 82%</li>
-          </ul>
-        <li>Vice President: </li>
-          <ul>
-            <li>Clinton 35%</li>
-            <li>Clinton 28%</li>
-            <li>Clinton 82%</li>
-          </ul>
-      </ul>
+      <a href="#"><p class="txt-c fs-l">Compatibility Report</p></a>
+      <p class='fs-xm txt-c'>Which candidates share my values?</p>
+      <table class='w mg'>
+        <tr>
+          <th colspan="2" class='txt-c p-t'>President</th>
+        </tr>
+        <tr>
+          <td>Hillary Clinton</td>
+
+          <td>48%</td>
+        </tr>
+        <tr>
+          <td>Donald Trump</td>
+
+          <td>28%</td>
+        </tr>
+        <tr>
+          <td>Undecided</td>
+
+          <td>34%</td>
+        </tr>
+        <th colspan="2" class='txt-c p-t'>Vice President</th>
+        </tr>
+        <tr>
+          <td>Jeb Bush</td>
+
+          <td>18%</td>
+        </tr>
+      </table>
     </div>
   </div>
   <div class="col-md-9 debug">
