--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,13 @@
     <%= csrf_meta_tags %>
   </head>
   <body class="body-not-bs">
-      <%= render 'shared/navigation' %>
+    <%= render 'shared/navigation' %>
+    <% if request.path != root_path %>
       <div class="bg-g w h-s"></div>
       <div class="bg-w w h-l p-a"></div>
-      <div class="bg-g w h-m p-a"></div>
+      <div class="bg-g w h-m <% if request.path != root_path %>p-a<% end %>
+    <% end %>
+      "></div>
     <div class="container debug">
       <div >
         <% flash.each do |name, msg| -%>
