--- a/app/assets/stylesheets/customs.css.scss
+++ b/app/assets/stylesheets/customs.css.scss
@@ -2,7 +2,7 @@
 @import "bootstrap";
 
 .debug {
-  border: 0px solid red;
+  border: 1px solid red;
 }
 
 a:active { color: grey !important; }
@@ -30,6 +30,8 @@ ul { list-style: none; }
 
 .h-s { height: 5em; }
 
+.h-xs { height: 2em; }
+
 .h-l { height: 14em; }
 
 .h-xl { height: 14.5em; }
@@ -49,6 +51,8 @@ ul { list-style: none; }
 .fs-m { font-size: 14px; }
 
 .fs-xm { font-size: 13px; }
+
+.fs-xs { font-size: 8px; }
 
 .fs-l { font-size: 18px; }
 
@@ -85,6 +89,8 @@ ul { list-style: none; }
 .p-r { padding-right: 2em; }
 
 .p-t { padding-top: 1.5em; }
+
+.p { padding: .5em; }
 
 .m-s { margin: .2em; }
 
