--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,24 +1,47 @@
 <div class='row'>
-  <div class="col-md-3">
+  <div class="col-md-3 debug bg-w">
+      <div class='row mg p'>
+        <img src="http://placehold.it/72x72" class='debug img-thumbnail col-md-3'>
+        <div class='col-md-9'>
+          <div class='h-xs debug'></div>
+          <ul class='debug'>
+            <li class='fs-xl mg-t'>Twitter Name</li>
+            <li class='fs-m'>@handle</li>
+          </ul>
+        </div>
+      </div>
+      <ul class='p-s mg-b'>
+        <li class="d-i debug p-r">
+          <a href="#">
+            <span class='fs-xs'>WATCHINGS<span class='d-b txt-c fs-m'>20</span></span>
+          </a>
+        </li>
+        <li class="d-i debug p-r">
+          <a href="#">
+            <span class='fs-xs'>WATCHED<span class='d-b txt-c fs-m'>100</span></span>
+          </a>
+        </li>
+        <li class="d-i debug p-r">
+          <a href="#">
+            <span class='fs-xs'>ENDORSED<span class='d-b txt-c fs-m'>32</span></span>
+          </a>
+        </li>
+      </ul>
   </div>
-  <div class="col-md-6">
-    <div class='h-m'></div>
+  <div class="col-md-6 bg-w debug">
     <div class='tab-pane rcorners bg-w row txt-c' id="endorse">
       <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
       <div class='col-md-9 mg p-s debug'>
       <a href="#"><strong>Hillary Clinton</strong></a href="#">
-      <ul class='mg-l'>
-        <li>Organization 1</li>
-        <li>Organization 2</li>
-        <li>Organization 3</li>
-      </ul>
       <ul>
-        <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-ban-circle c-r" aria-hidden="true"></span></a></li>
-        <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-info-sign c-b" aria-hidden="true"></span></a></li>
+        <li>Organization 1 <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></li>
+        <li>Organization 2 <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></li>
+        <li>Organization 3 <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></li>
       </ul>
     </div>
   </div>
-  </div>
-  <div class="col-md-3">
-  </div>
+</div>
+<div class="col-md-3 debug">
+  test
+</div>
 </div>
