--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
 <div class='row'>
   <div class="col-md-3">
     <div class="mg-r">
-      <img src="http://placehold.it/200x200" class='debug img-thumbnail'>
+      <img src=<%= @twitter_profile_image %> class='debug img-thumbnail' height="200" width="200">
       <ul class='d-i debug'>
-        <li class='fs-xl mg-t p-l'>Twitter Name</li>
-        <li class='fs-m p-l'>@handle</li>
+        <li class='fs-xl mg-t p-l'><%= @twitter_profile_name %></li>
+        <li class='fs-m p-l'><%= @twitter_handle %></li>
       </ul>
     </div>
     <div class="p-s rcorners bg-w mg-t mg-r">
