--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,35 +8,21 @@
       </ul>
     </div>
     <div class="p-s rcorners bg-w mg-t mg-r">
-      <a href="#"><p class="txt-c fs-l">Compatibility Report</p></a>
-      <p class='fs-xm txt-c'>Which candidates share my values?</p>
-      <table class='w mg'>
-        <tr>
-          <th colspan="2" class='txt-c p-t'>President</th>
-        </tr>
-        <tr>
-          <td>Hillary Clinton</td>
-
-          <td>48%</td>
-        </tr>
-        <tr>
-          <td>Donald Trump</td>
-
-          <td>28%</td>
-        </tr>
-        <tr>
-          <td>Undecided</td>
-
-          <td>34%</td>
-        </tr>
-        <th colspan="2" class='txt-c p-t'>Vice President</th>
-        </tr>
-        <tr>
-          <td>Jeb Bush</td>
-
-          <td>18%</td>
-        </tr>
-      </table>
+      <a href="#" class='fs-l'>Compatibility Report</a>
+      <ul class='mg-t'>
+        <li>Presidential:</li>
+          <ul>
+            <li>Clinton 35%</li>
+            <li>Clinton 28%</li>
+            <li>Clinton 82%</li>
+          </ul>
+        <li>Vice President: </li>
+          <ul>
+            <li>Clinton 35%</li>
+            <li>Clinton 28%</li>
+            <li>Clinton 82%</li>
+          </ul>
+      </ul>
     </div>
   </div>
   <div class="col-md-9 debug">
@@ -64,52 +50,9 @@
     </ul>
     <div class='tab-content'>
       <div class='tab-pane active' id='watching'>
-        <div class='rcorners bg-w row txt-c'>
-          <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
-          <div class='col-md-9 mg p-s debug'>
-          <a href="#"><strong>Organization Name</strong></a href="#">
-          <ul class='mg-l'>
-            <li>Hillary Clinton - Office - District</li>
-            <li>Joe Biden - Office - District</li>
-            <li>Bernie Sanders - Office - District</li>
-          </ul>
-          <ul>
-            <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-ban-circle c-r" aria-hidden="true"></span></a></li>
-            <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-info-sign c-b" aria-hidden="true"></span></a></li>
-          </ul>
-        </div>
-      </div>
-      <div class='rcorners bg-w row txt-c'>
-          <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
-          <div class='col-md-9 mg p-s debug'>
-          <a href="#"><strong>Organization Name</strong></a href="#">
-          <ul class='mg-l'>
-            <li>Hillary Clinton - Office - District</li>
-            <li>Joe Biden - Office - District</li>
-            <li>Bernie Sanders - Office - District</li>
-          </ul>
-          <ul>
-            <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-ban-circle c-r" aria-hidden="true"></span></a></li>
-            <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-info-sign c-b" aria-hidden="true"></span></a></li>
-          </ul>
-        </div>
+        <%= render "shared/organization_watch" %>
     </div>
-    </div>
-    <div class='tab-pane rcorners bg-w row txt-c' id="endorse">
-      <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
-      <div class='col-md-9 mg p-s debug'>
-      <a href="#"><strong>Hillary Clinton</strong></a href="#">
-      <ul class='mg-l'>
-        <li>Organization 1</li>
-        <li>Organization 2</li>
-        <li>Organization 3</li>
-      </ul>
-      <ul>
-        <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-ban-circle c-r" aria-hidden="true"></span></a></li>
-        <li class='d-i p-s'><a href='#'><span class="glyphicon glyphicon-info-sign c-b" aria-hidden="true"></span></a></li>
-      </ul>
-    </div>
-  </div>
+        <%= render "/shared/candidate_endorse" %>
 </div>
 </div>
 </div>
