updated index page

--- a/app/assets/stylesheets/customs.css.scss
+++ b/app/assets/stylesheets/customs.css.scss
@@ -40,6 +40,8 @@ ul { list-style: none; }
 
 .c-r { color: red; }
 
+.c-g { color: green; }
+
 .c-b { color: blue; }
 
 .p-a { position: absolute; }
@@ -57,7 +59,7 @@ ul { list-style: none; }
 .fs-l { font-size: 18px; }
 
 .body-not-bs {
-  background-color:#DBE7E0;
+  background-color:#F7FFFC;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 500;
 }
