--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class='row'>
-  <div class="col-md-3 debug bg-w">
+  <div class="col-md-3 debug bg-w mg">
       <div class='row mg p'>
         <img src="http://placehold.it/72x72" class='debug img-thumbnail col-md-3'>
         <div class='col-md-9'>
@@ -28,20 +28,37 @@
         </li>
       </ul>
   </div>
-  <div class="col-md-6 bg-w debug">
-    <div class='tab-pane rcorners bg-w row txt-c' id="endorse">
+  <div class="col-md-5 bg-w debug mg bg-g">
+    <form class="navbar-form">
+       <div class="form-group" style="display:inline;">
+         <div class="input-group" style="display:table;">
+           <span class="input-group-addon" style="width:1%;"><span class="glyphicon glyphicon-search"></span></span>
+           <input class="form-control" name="search" placeholder="Search for Candidates and Endorsers" autocomplete="off" autofocus="autofocus" type="text">
+         </div>
+       </div>
+     </form>
+    <div class='rcorners bg-w row txt-c'>
       <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
       <div class='col-md-9 mg p-s debug'>
-      <a href="#"><strong>Hillary Clinton</strong></a href="#">
-      <ul>
-        <li>Organization 1 <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></li>
-        <li>Organization 2 <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></li>
-        <li>Organization 3 <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span></li>
-      </ul>
+      <a href="#"><strong>Hillary Clinton - District - Office</strong></a href="#">
+      <table class='debug w txt-c'>
+        <tr class='debug'>
+          <td>Organization 1</td>
+          <td><span class="glyphicon glyphicon-plus-sign c-g" aria-hidden="true"></span></td>
+        </tr>
+        <tr>
+          <td>Organization 1</td>
+          <td><span class="glyphicon glyphicon-plus-sign c-g" aria-hidden="true"></span></td>
+        </tr>
+        <tr>
+          <td>Organization 1</td>
+          <td><span class="glyphicon glyphicon-plus-sign c-g" aria-hidden="true"></span></td>
+        </tr>
+      </table>
     </div>
   </div>
 </div>
-<div class="col-md-3 debug">
-  test
+<div class="col-md-3 mg debug">
+  Activity Feed
 </div>
 </div>
