--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -42,20 +42,37 @@
       <img src="http://placehold.it/48x48" alt="" class='mg p-s col-md-2'>
       <div class='col-md-9 mg p-s debug'>
       <a href="#"><strong>Hillary Clinton - District - Office</strong></a href="#">
+
+
+
+
       <table class='debug w txt-c'>
-        <tr class='debug'>
-          <td>Organization 1</td>
-          <td><%= button_to "Watch this Organization", new_user_path, :class => "glyphicon glyphicon-plus-sign c-g",:"aria-hidden"=> "true", :method => :post  %></td>
-        </tr>
-        <tr>
-          <td>Organization 1</td>
-          <td><%= button_to "Watch this Organization", new_user_path, :class => "glyphicon glyphicon-plus-sign c-g",:"aria-hidden"=> "true", :method => :post  %></td>
-        </tr>
-        <tr>
-          <td>Organization 1</td>
-          <td><%= button_to "Watch this Organization", new_user_path, :class => "glyphicon glyphicon-plus-sign c-g",:"aria-hidden"=> "true", :method => :post  %></td>
-        </tr>
+
+        <% @organizations.each do |organization| %>
+
+            <tr class='debug'>
+              <td><%= organization.user.name %></td>
+
+            <% if @logged_in %>
+
+              <td><%= button_to "Watch this Organization", watch_path(organization.user), :class => "glyphicon glyphicon-plus-sign c-g",:"aria-hidden"=> "true", :method => :post  %></td>
+
+            <% else %>
+                <!-- this below button doesnt work for now -->
+              <td><%= button_to "Watch this Organization", login_and_watch_path, :class => "glyphicon glyphicon-plus-sign c-g",:"aria-hidden"=> "true", :method => :post, :headers => { :organization => organization }  %></td>
+
+            <% end %>
+
+            </tr>
+
+        <% end %>
+
       </table>
+
+
+
+
+
     </div>
   </div>
 </div>
