--- a/app/assets/stylesheets/customs.css.scss
+++ b/app/assets/stylesheets/customs.css.scss
@@ -2,7 +2,7 @@
 @import "bootstrap";
 
 .debug {
-  border: 0px solid red;
+  border: 1px solid red;
 }
 
 a:active { color: grey !important; }
@@ -94,11 +94,14 @@ ul { list-style: none; }
 
 .p-t { padding-top: 1.5em; }
 
-
 .p { padding: .5em; }
 
 
 .m-s { margin: .2em; }
+
+td {
+    padding: .2em;
+}
 
 .rcorners {
     border-radius: 3px;
