--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,7 @@
       <ul class='d-i debug'>
         <li class='fs-xl mg-t p-l'><%= @twitter_profile_name %></li>
         <li class='fs-m p-l'><%= @twitter_handle %></li>
+          <%= render 'shared/district_form' %>
       </ul>
     </div>
     <div class="p-s rcorners bg-w mg-t mg-r">
