--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class='row'>
-  <div class="col-md-3 debug bg-w mg">
-    <div class='row mg p'>
+  <div class="col-md-3 debug mg">
+    <div class='row mg p bg-w'>
       <img src=<%= @twitter_profile_image %> class='debug img-thumbnail col-md-3'>
       <div class='col-md-9'>
         <div class='h-xs debug'></div>
@@ -28,14 +28,16 @@
       </li>
     </ul>
     </div>
-    <div class='debug bg-w mg-t'>
-      <h4>How This Works</h4>
+    <div class='debug bg-w mg mg-t p'>
+      <h4 class='fw-t txt-c'>How This Works</h4>
       <p>
+        <strong>Purpose: </strong> Help users discover shared values through following organizational endorsements.<br/>
+        <strong>How: </strong>Watch organizations you support and see who which candidates they endorse.
         Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.
       </p>
     </div>
   </div>
-  <div class="col-md-5 bg-w debug mg bg-g">
+  <div class="col-md-5 bg-w debug mg bg-lg">
     <form class="navbar-form">
       <div class="form-group" style="display:inline;">
         <div class="input-group" style="display:table;">
@@ -64,7 +66,23 @@
     </div>
   </div>
 </div>
-<div class="col-md-3 mg debug">
-  Activity Feed
+<div class="col-md-3 mg bg-w debug">
+  <h4 class='fw-t txt-c'>Recent Endorsements</h4>
+  <div>
+    <dl class='p-l-m'>
+      <dt><a href="google.com">Planned Parenting</a></dt>
+      <dd><span>Hillary Clinton<span> for president</dd>
+      <dd class='c-g'><span>32</span> endorsements for this candidate</dd>
+      <dt><a href='msn.com'>Peeper Rams</a></dt>
+      <dd><span>Robert Baker<span> for vice president</dd>
+      <dd class='c-g'><span>532</span> endorsements for this candidate</dd>
+      <dt><a href="google.com">Grasshopperz</a></dt>
+      <dd><span>Tom Lee<span> for mayor</dd>
+      <dd class='c-g'><span>1000</span> endorsements for this candidate</dd>
+      <dt><a href='msn.com'>DBC</a></dt>
+      <dd><span>Felix Lobkowicz<span> for governor</dd>
+      <dd class='c-g'><span>120</span> endorsements for this candidate</dd>
+    </dl>
+  </div>
 </div>
 </div>
