populate text-field value

--- a/app/views/shared/_district_form.html.erb
+++ b/app/views/shared/_district_form.html.erb
@@ -1,8 +1,8 @@
-<%= form_for @user do |f| %>
+<%= form_for current_user do |f| %>
 
 <li class='fs-l mg-t p-l'><%= f.label :where_will_you_vote? %></li>
 
-<li class='fs-l mg-t p-l'><%= f.text_field :district, :class => "glyphicon glyphicon-search", :placeholder => @current_user.district %></li>
+<li class='fs-l mg-t p-l'><%= f.text_field :populate_district , :class => "glyphicon-search", :placeholder => "Please input your district" %></li>
 
 <li class='fs-l mg-t p-l'><%= f.submit "Update your district", :class => "form-control" %></li>
 
